@@ -7,8 +7,8 @@
  *
  * -----------------------------------------------------------------
  * File:          $RCSfile: Version.h,v $
- * Date modified: $Date: 2004-07-21 18:45:57 $
- * Version:       $Revision: 1.25 $
+ * Date modified: $Date: 2004-08-30 14:54:39 $
+ * Version:       $Revision: 1.26 $
  * -----------------------------------------------------------------
  *
  *********************************************************** ggt-head end */
@@ -51,7 +51,7 @@
 // The major/minor/patch version (up to 3 digits each).
 #define GMTL_VERSION_MAJOR    0
 #define GMTL_VERSION_MINOR    3
-#define GMTL_VERSION_PATCH    6
+#define GMTL_VERSION_PATCH    7
 
 //--------------------------------------------------------------------------
 //--------------------------------------------------------------------------
